# actin-tubules-sim

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
examples/: datagen.ipynb  train.ipynb
examples/CARESpecial/: augmentor.ipynb
examples/DN/: datagen.ipynb  predict.ipynb  train.ipynb  train_care.ipynb  train_rdl_denoising.ipynb  train_rdl_denoising.py
examples/DN/logs/fitDN/20240528-134418/train/: events.out.tfevents.1716897614.kang.cogsci.uni-osnabrueck.de.23034.0.v2
examples/DN/logs/fitDN/20240627-185131/train/: events.out.tfevents.1719507334.kang.cogsci.uni-osnabrueck.de.52717.0.v2
examples/DN/logs/fitDN/20240627-185844/train/: events.out.tfevents.1719507957.kang.cogsci.uni-osnabrueck.de.53174.0.v2
examples/DN/logs/fitDN/20240702-120608/train/: events.out.tfevents.1719915093.kang.cogsci.uni-osnabrueck.de.93738.0.v2
examples/DN/logs/fitDN/20240702-122142/train/: events.out.tfevents.1719915985.kang.cogsci.uni-osnabrueck.de.94323.0.v2
examples/DN/logs/fitDN/20240702-141938/train/: events.out.tfevents.1719923057.kang.cogsci.uni-osnabrueck.de.96256.0.v2
examples/DN/logs/fitDN/20240702-145816/train/: events.out.tfevents.1719925388.kang.cogsci.uni-osnabrueck.de.97274.0.v2
examples/DN/logs/fitDN/20240704-142132/train/: events.out.tfevents.1720096110.kang.cogsci.uni-osnabrueck.de.21882.0.v2
examples/DN/root_dir/CAREDenoising/microtubule_care/: weights_last.h5
examples/DN/root_dir/microtubule_care/: config.json  weights_best.h5
examples/FijiMacros/: PSF_StackReg.ijm  Resize_Images.ijm
examples/SR/: datagen.ipynb  train.ipynb  train_unet.py
src/actin_tubules_sim/: __init__.py  _version.py  caped.yaml  loss.py  models.py  prepare_datasets.py  sim_fitting.py
src/actin_tubules_sim/_tests/: test_modamp.py
(+27 files in other folders)
