[metadata]
name = actin-tubules-sim

description = Denoising and Super resolution of microtubule and actin filaments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kapoorlabs-CAPED/actin-tubules-sim
author = Varun Kapoor
author_email = randomaccessiblekapoor@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/Kapoorlabs-CAPED/actin-tubules-sim/issues
    Documentation = https://github.com/Kapoorlabs-CAPED/actin-tubules-sim#README.md
    Source Code = https://github.com/Kapoorlabs-CAPED/actin-tubules-sim
    User Support = https://github.com/Kapoorlabs-CAPED/actin-tubules-sim/issues

[options]
packages = find:
install_requires =
    mrcfile
    tifffile
    csbdeep
    ipywidgets

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
caped.manifest =
    actin-tubules-sim = actin_tubules_sim:caped.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
